gobmkida/g1/compute_connection_distances
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/compute_connection_distances/src/engine/readconnect.c:1843:8: error: use of undeclared identifier 'dword_760CDC'
v338 = dword_760CDC[v292] + v25; 
       ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/compute_connection_distances/src/engine/readconnect.c:2063:9: error: use of undeclared identifier 'dword_760CDC'
right = dword_760CDC[k]; 
        ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/compute_connection_distances/src/obj/1/readconnect.o] Error 1
